[package]
name = "wg-multizone"
version = "1.0.3"
edition = "2024"

[[bin]]
name = "wg-multizone"
path = "src/main.rs"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3

[profile.dev]
incremental = true

[dependencies]
base64 = "0.22.1"
hex = "^0.4.3"
hickory-resolver = "0.25.2"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "^0.2.3"
url = "2.5.7"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }

[dependencies.defguard_wireguard_rs]
package = "defguard_wireguard_rs"
git = "https://github.com/DefGuard/wireguard-rs.git"
rev = "v0.7.8"

[target.'cfg(not(any(target_os = "macos", target_os="windows", target_arch = "arm")))'.dependencies]
tikv-jemallocator = "0.6.1"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main-centos"
